fix: Move footer outside ScrollView to prevent position jumping

--- a/fourspm_web/src/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.scss
+++ b/fourspm_web/src/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.scss
@@ -17,3 +17,17 @@
 .content {
   flex-grow: 1;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.footer-container {
+  margin-top: auto;
+  position: relative;
+  z-index: 1;
+  padding: 0 20px;
+}
